Gabriel_changes_set24_16:07

--- a/views/cart.html
+++ b/views/cart.html
@@ -56,9 +56,10 @@ h1 {
 
 .image-container img {
     width: 10%;               /* Set the width of the images */
-    filter: drop-shadow(0 50px 20px #0009);
+    filter: drop-shadow(0 20px 20px #0009);
     display: block;           /* Make images block elements */
-    margin: 0;          /* Center images within the container */
+    margin: 0;     
+    border-radius: 20%;     /* Center images within the container */
 }
 
 
