--- a/PI/Tela Inicial/Css/home.css
+++ b/PI/Tela Inicial/Css/home.css
@@ -1,33 +1,8 @@
-.slider{
-    background-color: aqua;
-    width: 100vw;
-    height: 400px;
-    display: flex;
-}
 
-
-.slider-content{
-    display: flex;
-    width: 400%;
-    display: flex;
-}
-
-.slider-box{
-    display: flex;
-    
-}
-
-.active-slider1{
-    margin-left: -33.4%;
-}
-.active-slider2{
-    margin-left: -66.8%;
-}
-
-.item-slider{
+main{
     display: flex;
     width: 100%;
-
+    height: 100vh;
 }
 
 
@@ -36,37 +11,4 @@
 
 
 
-
-
-
-
-
-
-
-.btn-slider-content{
-    position: absolute;
-    top: 33%;
-    width: 100%;
-    justify-content: space-between;
-    padding: 2rem;
-    display: flex;
-}
-
-.btn-content-default-slider{
-    display: flex;
-    background-color: #4a4a4a6f;
-    padding: 10px;
-    border-radius: 50%;
-    width: 40px;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    color: white;
-    cursor: pointer;
-    transition: 0.3s ease;
-}
-
-.btn-content-default-slider:hover{
-    transform: scale(1.07);
-}
-
+/* AREA BANNER */
