--- a/PI/Tela Inicial/Css/navbar.css
+++ b/PI/Tela Inicial/Css/navbar.css
@@ -24,10 +24,6 @@ body{
     height: auto;
     align-items: center;
   }
-
-
-
-
   
   /* Area Logo */
   
@@ -36,7 +32,6 @@ body{
     height: auto;
     width: 20%;
     z-index: 200;
-    
 
   }
   
@@ -350,7 +345,6 @@ Area Responsiva */
 
   .img-logo{
     padding-left: 0.5rem;
-    
   }
   
 
@@ -604,7 +598,7 @@ Area Responsiva */
     left: 0;
     overflow: hidden;
     opacity: 0;
-    transition:  0.1s ease;
+    transition:  0.1s ease-in-out;
     padding-top: 1rem;
 }
 
@@ -618,6 +612,7 @@ Area Responsiva */
 .dropdown__menu {
     display: flex;
     opacity: 1;
+    transition: 0.3s ease;
     padding-left: 10px;
     width: 100%;
     height: 100%;
@@ -777,7 +772,7 @@ Area Responsiva */
   }
 
   .mobile-btn.abrir-menu{
-    width: 75%;
+    width: 70%;
   }
 
   .img-logo{
