--- a/PI/Tela Inicial/Css/syte.css
+++ b/PI/Tela Inicial/Css/syte.css
@@ -4,7 +4,6 @@
 @import url(login.css);
 @import url(footer.css);
 
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -18,6 +17,7 @@
   --color-CinzaEscuro-3: #4A4A4A;
   --color-Azul-4: #4200db;
   --color-CinzaClaro-5: #E2E2E2;
+  --color-AzulMarinho-7: #2E475C;
 
 
 
