--- a/PI/Tela Inicial/Css/home.css
+++ b/PI/Tela Inicial/Css/home.css
@@ -4,3 +4,192 @@ main{
     height: 100vh;
     
 }
+
+/* AREA BANNER */
+
+.slide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.carousel-item .w-100{
+    object-fit:scale-down;
+}
+
+
+
+
+
+/* AREA PROMOCIONAL */
+
+.area_promocional{
+    display: flex;
+    width: 100%;
+    height: 30%;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+
+.content_area_promocional{
+    display: flex;
+    width: 85%;
+    height: 80%;
+    background-color: rgb(244, 244, 244);
+    justify-content: center;
+    align-items: center;
+    column-gap: 100px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+
+}
+
+
+.icon_promocional{
+    display: flex;
+    column-gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.img_content_promocional{
+    display: flex;
+    border: 2px solid #4A4A4A;
+    width: 80px;
+    height: 80px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    
+}
+
+.img_content_promocional, .icon_promocional img:hover{
+    transform: scale(1.05);
+}
+
+.icon_promocional img{
+    display: flex;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    transition: 0.2s ease;
+}
+
+.icon_promocional .texto_promocional{
+    display: flex;
+    font-size: 18px;
+    font-weight: 400;
+    color: #4A4A4A;
+    text-transform: uppercase;
+}
+
+
+
+
+
+/* AREA DE CATEGORIAS */
+
+
+.cards_cartegoria{
+    display: grid;
+    width: 100%;
+    height: 50%;
+    margin-top: 2rem;
+}
+
+.content_cards_categoria{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    padding: 30px;
+}
+
+
+
+
+.content_cards_categoria .title_categoria{
+    display: flex;
+    width: 100%;
+    height: 20%;
+    align-items: end;
+    font-size: 20px;
+    font-weight: 600;
+    padding-left: 5rem;
+    padding-bottom: 2rem;
+    
+}
+
+
+.list_cards_categoria{
+    display: flex;
+    column-gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.list_cards_categoria .item_cards_categoria{
+    width: 150px;
+    height: 200px;
+    background-color: rgb(246, 246, 246);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    row-gap: 15px;
+    transition: 0.2s ease;
+    cursor: pointer;
+
+}
+    
+    
+.list_cards_categoria .item_cards_categoria:hover{
+    background-color: white;
+    transform: scale(1.10);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+
+
+}
+
+
+
+.img_content_categoria{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+}
+
+.img_content_categoria img{
+    display: flex;
+    height: 100px;
+}
+
+
+.text_cards_categoria{
+    font-weight: 500;
+    color: #4A4A4A;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* AREA DE CARDS PRODUTOS*/
+
+
+.cards_produtos{
+    display: flex;
+}
