--- a/PI/Tela Inicial/Css/home.css
+++ b/PI/Tela Inicial/Css/home.css
@@ -215,10 +215,9 @@ main{
 
 
 .swiper{
-    width: 80%;
+    width: 92%;
     height: 84.1%;
     display: flex;
-    background-color: aqua;
 }
 
 .swiper-wrapper{
@@ -398,7 +397,104 @@ main{
     color: white;
 
 }
-/* CARDS */
+
+
+/* AREA CARD BANNER PROMOCIONAL */
+
+
+.banner_card{
+    display: grid;
+    height: 450px;
+    width: 100%;
+    justify-content: center;
+    grid-template-columns: 50% 40%;
+    gap: 1rem;
+
+}
+
+.banner_card_1{
+    grid-area: banner1;
+    height: 50%;
+    width: 100%;
+    display: flex;
+    padding: 5px;
+
+
+}
+
+.banner_card_1 img{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+}
+
+
+.banner_card_2{
+    grid-area:  banner2;
+    height:50% ;
+    display: flex;
+    width: 100%;
+    border-radius: 5px;
+    flex-direction: column;
+    gap: 0.8rem;
+    padding-top: 0.3rem;
+}
+
+.banner_card_2 img{
+    display: flex;
+    width: 100%;
+    height: 50%;
+    border-radius: 5px;
+    object-fit: cover;
+
+}
+
+.banner_card_3{
+    grid-area:  banner3;
+    background-color: rgb(0, 255, 47);
+    height: 50%;
+    display: flex;
+    width: 100%;
+}
+
+.banner_card_3 img{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+}
+
+
+.grid-banner-areas{
+    grid-template-areas: 
+    "banner1 banner2"
+    "banner1 banner2"
+    "banner1 banner3"
+    "banner1 banner3"
+    ;
+}
 
 
 
+
+
+
+
+/* BANNER SECUNDÁRIO */
+
+
+.banners_secudarios{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.banners_secudarios img{
+    display: flex;
+    object-fit: scale-down;
+    width: 100%;
+}
