--- a/PI/Tela Inicial/Css/home.css
+++ b/PI/Tela Inicial/Css/home.css
@@ -28,21 +28,22 @@ main{
 .area_promocional{
     display: flex;
     width: 100%;
-    height: 30%;
+    height: 40%;
     justify-content: center;
     align-items: center;
+
     
 }
 
 
 .content_area_promocional{
     display: flex;
-    width: 85%;
+    width: 90%;
     height: 80%;
     background-color: rgb(244, 244, 244);
     justify-content: center;
     align-items: center;
-    column-gap: 100px;
+    column-gap: 120px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
 
@@ -60,8 +61,8 @@ main{
 .img_content_promocional{
     display: flex;
     border: 2px solid #4A4A4A;
-    width: 80px;
-    height: 80px;
+    width: 6rem;
+    height: 6rem;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
@@ -74,7 +75,7 @@ main{
 
 .icon_promocional img{
     display: flex;
-    height: 50px;
+    height: 3rem;
     justify-content: center;
     align-items: center;
     transition: 0.2s ease;
@@ -96,10 +97,10 @@ main{
 
 
 .cards_cartegoria{
-    display: grid;
+    display: flex;
     width: 100%;
-    height: 300px;
-    margin-top: 2rem;
+    height: 50%px;
+    
 }
 
 .content_cards_categoria{
@@ -127,10 +128,11 @@ main{
 
 .list_cards_categoria{
     display: flex;
-    column-gap: 37px;
+    gap: 37px;
     justify-content: center;
     align-items: center;
     width: 100%;
+
     
 }
 
@@ -208,8 +210,10 @@ main{
 .card_produtos{
     display: flex;
     width: 100%;
-    height: 550px;
+    height: 547px;
     padding: 1rem;
+    justify-content: center;
+    align-items: center;
 
 } 
 
@@ -222,7 +226,6 @@ main{
 
 .swiper-wrapper{
     display: flex;
-    justify-items: center;
 
 }
 
@@ -404,11 +407,13 @@ main{
 
 .banner_card{
     display: grid;
-    height: 450px;
+    height: 65%;
     width: 100%;
     justify-content: center;
     grid-template-columns: 50% 40%;
     gap: 1rem;
+    position: relative;
+    padding-top: 2.5rem;
 
 }
 
@@ -418,7 +423,6 @@ main{
     width: 100%;
     display: flex;
     padding: 5px;
-
 
 }
 
@@ -491,10 +495,180 @@ main{
     justify-content: center;
     align-items: center;
     display: flex;
+    height: 65%;
+
 }
 
 .banners_secudarios img{
     display: flex;
     object-fit: scale-down;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+} 
+
+
+
+/* CARDS CATEGORIA SEGUNDARIO */
+
+
+.cards_categoria_secundario{
+    display: flex;
+    height: 60%;
     width: 100%;
+    justify-content: center;
+    align-items: center;
+}   
+
+
+.content_cards_cat_2{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    column-gap: 5rem;
+}
+
+.content_cards_cat_2 .item_card_cat_2{
+    display: flex;
+    height: 90%;
+    width: 22%;
+    position: relative;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+}
+
+
+.item_card_cat_2 img{
+    display: flex;
+    object-fit:cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.title_card_cat_2{
+    display: flex;
+    z-index: 20;
+    background-color: rgba(0, 0, 0, 0.297);
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+
+
+.item_card_cat_2:hover{
+    transform: scale(1.05);
+    background-color: rgba(0, 0, 0, 0.519);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+
+.item_card_cat_2:hover .title_card_cat_2{
+
+    transition: all 0.3s ease-in-out;
+}
+
+
+
+/* 
+BANNER PROMOCIONAL FINAL */
+
+
+
+
+.banner_promocional_final{
+    display: flex;
+    width: 100%;
+    height: 90%;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.content_banner_promocional_final{
+    display: flex;
+    background-color:#f2f2f2;
+    height: 70%;
+    width: 90%;
+    border-radius: 5px;
+
+}
+
+
+.item_promocional_final{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.text_content_promo_final{
+    display: flex;
+    width: 90%;
+    height: 80%;
+    align-items: end;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.text_call_banner_final{
+    display: flex;
+    width: 100%;
+    font-size: 25px;
+    font-weight: 500;
+    letter-spacing: 0.2rem;
+    color: #4A4A4A;
+    height: 80%;
+    align-items: end;
+}
+
+.content_btn_banner_final{
+    display: flex;
+    width: 100%;
+    height: 40%;
+    align-items: center;
+}
+
+
+.btn__banner_final{
+    display: flex;
+    height: 70px;
+    width: 200px;
+    background-color: #FA301E;
+    border-radius: 5px;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 600;
+    color: #ffffff;
+}
+
+
+.content_img_final{
+    display: flex;
+    width: 40%;
+    position: relative;
+}
+
+
+.content_img_final img{
+    position:absolute;
+    display: flex;
+
+    height: 600px;
+    right: 0;
+    top: -10rem;
+    transform: rotate(10deg);
 }
