--- a/PI/Tela Inicial/Css/home.css
+++ b/PI/Tela Inicial/Css/home.css
@@ -514,71 +514,73 @@ main{
 /* CARDS CATEGORIA SEGUNDARIO */
 
 
-.cards_categoria_secundario{
+
+.card_cat_2{
     display: flex;
+    background-color: aqua;
+    width: 100%;
     height: 60%;
-    width: 100%;
     justify-content: center;
     align-items: center;
-}   
-
-
-.content_cards_cat_2{
-    display: flex;
-    height: 100%;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    column-gap: 5rem;
 }
 
-.content_cards_cat_2 .item_card_cat_2{
+.content_card_cat_2{
     display: flex;
+    width: 90%;
     height: 90%;
-    width: 22%;
-    position: relative;
-    text-decoration: none;
-    transition: all 0.3s ease-in-out;
+    background-color: purple;
+    align-items: center;
+    gap: 2rem;
 }
 
 
-.item_card_cat_2 img{
+.item_card_cat_2{
     display: flex;
-    object-fit:cover;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-.title_card_cat_2{
-    display: flex;
-    z-index: 20;
-    background-color: rgba(0, 0, 0, 0.297);
-    width: 100%;
-    height: 100%;
+    background-color: rgb(243, 243, 243);
+    width: 20%;
+    height: 90%;
     justify-content: center;
     align-items: center;
-    color: #ffffff;
-    font-weight: 500;
+    background: url(../src/imagens/img_categorias_2/7\ Tiny\ Crochet\ Animal\ Ideas\ List\ -\ Fabricerie.jfif);
+    background-size: contain;
+    border-radius: 5px;
+    position: relative;
+    cursor: pointer;
+}
+
+.overlay_cat_2{
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.048);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+
+
+.text_card_cat_2{
+    color: white;
     font-size: 20px;
+    z-index: 10;
+    font-weight: 600;
+
+}
+
+
+.item_card_cat_2:hover .text_card_cat_2{
+    font-size: 30px;
+}
+
+
+.item_card_cat_2:hover .overlay_cat_2{
+    background-color: rgba(0, 0, 0, 0.208);
 }
 
 
 
-.item_card_cat_2:hover{
-    transform: scale(1.05);
-    background-color: rgba(0, 0, 0, 0.519);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-}
 
 
-.item_card_cat_2:hover .title_card_cat_2{
 
-    transition: all 0.3s ease-in-out;
-}
 
 
 
