--- a/PI/Tela Inicial/Css/home.css
+++ b/PI/Tela Inicial/Css/home.css
@@ -1,9 +1,8 @@
-main{
+ main{
     display: flex;
     width: 100%;
-    height: 100vh;
-    
-}
+    height: 100%;
+} 
 
 /* AREA BANNER */
 
@@ -18,7 +17,6 @@ main{
 .carousel-item .w-100{
     object-fit:scale-down;
 }
-
 
 
 
@@ -517,69 +515,87 @@ main{
 
 .card_cat_2{
     display: flex;
-    background-color: aqua;
     width: 100%;
-    height: 60%;
+    height: 80%;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 4rem;
 }
 
 .content_card_cat_2{
     display: flex;
     width: 90%;
-    height: 90%;
-    background-color: purple;
+    height: 75%;
     align-items: center;
-    gap: 2rem;
+    justify-content: center;
+    gap: 5rem;
+    
+ 
 }
+
+
 
 
 .item_card_cat_2{
     display: flex;
-    background-color: rgb(243, 243, 243);
-    width: 20%;
-    height: 90%;
+    width:23%;
+    height: 100%;
     justify-content: center;
     align-items: center;
-    background: url(../src/imagens/img_categorias_2/7\ Tiny\ Crochet\ Animal\ Ideas\ List\ -\ Fabricerie.jfif);
-    background-size: contain;
-    border-radius: 5px;
     position: relative;
+    border-radius: 5px;
+    overflow: hidden;
     cursor: pointer;
+
+}
+
+.img_card_cat_2{
+    display: flex;
+    object-fit:cover;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 5;
+    border-radius: 5px;
+    transition: all 0.2s ease;
+
 }
 
 .overlay_cat_2{
     display: flex;
-    background-color: rgba(0, 0, 0, 0.048);
+    z-index: 10;
+    background-color: #0000003a;
     width: 100%;
     height: 100%;
     position: absolute;
+    border-radius: 5px;
+    transition: all 0.2s ease;
 }
-
-
 
 .text_card_cat_2{
+    display: flex;
+    z-index: 15;
     color: white;
+    font-weight: 500;
     font-size: 20px;
-    z-index: 10;
-    font-weight: 600;
-
+    transition: all 0.2s ease;
 }
 
 
-.item_card_cat_2:hover .text_card_cat_2{
-    font-size: 30px;
-}
 
+
+.item_card_cat_2:hover .img_card_cat_2{
+    transform: scale(1.10);
+}
 
 .item_card_cat_2:hover .overlay_cat_2{
-    background-color: rgba(0, 0, 0, 0.208);
+    background-color: #0000006a;
 }
 
-
-
-
-
+.item_card_cat_2:hover .text_card_cat_2{
+    font-size: 25px;
+}
 
 
 
@@ -715,3 +731,218 @@ BANNER PROMOCIONAL FINAL */
 
 
 
+@media (max-width: 1020px) {
+
+    
+/* AREA PROMOCIONAL */
+    
+.area_promocional{
+    display: flex;
+    width: 100%;
+    height: 40%;
+    
+}
+
+
+.content_area_promocional{
+    display: flex;
+    width: 90%;
+    height: 70%;
+    column-gap: 100px;
+
+
+}
+
+
+.icon_promocional{
+    column-gap: 20px;
+}
+
+
+.img_content_promocional{
+    width: 5rem;
+    height: 5rem;
+
+}
+
+
+.icon_promocional img{
+    height: 3rem;
+}
+
+.icon_promocional .texto_promocional{
+    font-size: 15px;
+}
+
+
+
+
+
+/* BANNER SECUNDÁRIO */
+
+
+.banners_secudarios{
+    width: 100%;
+    height: 40%;
+}
+
+
+
+
+
+/* AREA CARD BANNER PROMOCIONAL */
+
+
+.banner_card{
+    display: grid;
+    height: 45%;
+    width: 100%;
+}
+
+.banner_card_1{
+    grid-area: banner1;
+    height: 60%;
+    width: 100%;
+
+}
+
+.banner_card_1 img{
+    width: 100%;
+    height: 100%;
+
+}
+
+
+.banner_card_2{
+    grid-area:  banner2;
+    height:60% ;
+    display: flex;
+    width: 100%;
+}
+
+.banner_card_2 img{
+    width: 100%;
+    height: 50%;
+
+}
+
+.banner_card_3{
+    grid-area:  banner3;
+    height: 50%;
+    width: 100%;
+}
+
+.banner_card_3 img{
+    width: 100%;
+    height: 100%;;
+}
+
+
+.grid-banner-areas{
+    grid-template-areas: 
+    "banner1 banner2"
+    "banner1 banner2"
+    "banner1 banner3"
+    "banner1 banner3"
+    ;
+}
+
+
+
+
+/* CARDS CATEGORIA SEGUNDARIO */
+
+
+
+.card_cat_2{
+    display: flex;
+    width: 100%;
+    height: 60%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+.content_card_cat_2{
+    display: flex;
+    width: 90%;
+    height: 75%;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    
+ 
+}
+
+
+
+
+.item_card_cat_2{
+    display: flex;
+    width:30%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 5px;
+    overflow: hidden;
+    cursor: pointer;
+
+}
+
+.img_card_cat_2{
+    display: flex;
+    object-fit:cover;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 5;
+    border-radius: 5px;
+    transition: all 0.2s ease;
+
+}
+
+.overlay_cat_2{
+    display: flex;
+    z-index: 10;
+    background-color: #0000003a;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 5px;
+    transition: all 0.2s ease;
+}
+
+.text_card_cat_2{
+    display: flex;
+    z-index: 15;
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+    transition: all 0.2s ease;
+}
+
+
+
+
+.item_card_cat_2:hover .img_card_cat_2{
+    transform: scale(1.10);
+}
+
+.item_card_cat_2:hover .overlay_cat_2{
+    background-color: #0000006a;
+}
+
+.item_card_cat_2:hover .text_card_cat_2{
+    font-size: 25px;
+}
+
+
+
+
+
+
+
+    
+}
