--- a/PI/Tela Inicial/Css/syte.css
+++ b/PI/Tela Inicial/Css/syte.css
@@ -3,6 +3,7 @@
 @import url(home.css);
 @import url(login.css);
 @import url(navbar.css);
+@import url(syte.css);
 
 
 
@@ -39,8 +40,7 @@ body{
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: rgb(255, 255, 255);
   flex-direction: column;
-
+  
 }
 
