--- a/PI/Tela Inicial/src/Css/SobreNos.css
+++ b/PI/Tela Inicial/src/Css/SobreNos.css
@@ -1,6 +1,27 @@
+
+main{
+    flex-direction: column;
+}
+
+
+/* .shape_sobre{
+    display: flex;
+    position: absolute;
+    width:400px;
+    height:400px;
+    border-radius: 50%;
+    background-color:#FA301E;
+    z-index:0;
+    bottom: -40rem;
+    left: 10rem;
+} */
+
+
+/* AREA BANNER SOBRE NÓS */
+
+
 .Banner_Sobre_Nos{
     display: flex;
-    background: aqua;
     width: 100%;
     height: 500px;
 }
@@ -8,10 +29,10 @@
 
 .content_banner_sobre_nos{
     display: flex;
-    background-color: red;
     width: 100%;
     height: 100%;
     position: relative;
+
 }
 
 
@@ -22,6 +43,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 0px 0px 0px 500px;
 }
 
 .content_coteudo_banner_sobre{
@@ -31,7 +53,8 @@
     flex-direction: column;
     justify-content: center;
     padding: 100px;
-    background-color: rgba(0, 0, 0, 0.327);
+    background-color: rgba(24, 24, 24, 0.229);
+    border-radius: 0px 0px 0px 500px;
     row-gap: 20px;
 }
 
@@ -42,6 +65,7 @@
     text-transform: capitalize;
     font-weight: 500;
     width: 40%;
+    
 }
 
 
@@ -66,20 +90,131 @@
 
 .btn_sobre a{
     text-decoration: none;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(60, 60, 60);
     width: 200px;
     justify-content: center;
     align-items: center;
     display: flex;
     height: 40px;
     border-radius: 5px;
-    color: rgb(45, 45, 45);
+    color: rgb(255, 255, 255);
     font-size: 15px;
     font-weight: 600;
     transition: all 0.2s ease;
 }
 
 .btn_sobre a:hover{
-    background-color: #242424;
+    background-color: #FA301E;
     color: white;
+}
+
+
+
+
+
+
+
+/* AREA VIDEO SOBRE NÓS */
+
+
+.video_sobre{
+    display: flex;
+    height: 100%;
+}
+
+
+.content_video_sobre{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+
+.video_content{
+    width: 60%;
+    height: 70%;
+    display: flex;
+    border-radius: 5px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    
+
+}
+
+
+.item_conteudo_sobre{
+    position: absolute;
+    display: flex;
+    background-color: #ffffff;
+    width: 30%;
+    height: 40%;
+    right: 2rem;
+    flex-direction: column;
+    border-radius: 50px 5px 5px 50px;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
+}
+
+
+.text_sobre_video{
+    display: flex;
+    text-transform: capitalize;
+    text-align:center;
+    color: #3f3f3f;
+    letter-spacing: 2px;
+    font-size: 13px;
+
+
+}
+
+
+.btn_video_sobre{
+    display: flex;
+    position: absolute;
+    bottom: -1rem;
+    width: 200px;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    border: 0;
+    border-radius: 5px;
+    color: white;
+    background-color: #4200db;
+    font-weight: 500;
+    font-size: 15px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+
+.btn_video_sobre:hover{
+    background-color: #eeeeee;
+    color: #4A4A4A;
+}
+
+
+
+
+
+/* AREA CARDS SERVICE SOBRE NÓS */
+
+
+
+.cards_service{
+    display: flex;
+    background-color: aqua;
+    width: 100%;
+    height: 50vh;
+}
+
+
+.content_cards_service{
+    display: flex;
+    background-color:red;
+    flex-direction: column;
+    
 }
