--- a/PI/src/Css/cadastro_categoria_adm.css
+++ b/PI/src/Css/cadastro_categoria_adm.css
@@ -5,8 +5,8 @@
     display: flex;
     width: 100%;
     height: 50vh;
-    padding: 1rem;
     flex-direction: column;
+    padding-top: 1rem;
 }
 
 
@@ -105,6 +105,7 @@
     color: #4A4A4A;
     font-weight: 500;
     font-size: 12px;
+    text-transform: uppercase;
 }
 
 
@@ -184,7 +185,6 @@
         display: flex;
         width:100%;
         height: 50vh;
-        padding: 1rem;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -215,7 +215,6 @@
         display: flex;
         width:80vw;
         height: 50vh;
-        padding: 1rem;
         flex-direction: column;
     }
 
@@ -291,7 +290,6 @@
         display: flex;
         width:80vw;
         height: 50vh;
-        padding: 1rem;
         flex-direction: column;
     }
 
