--- a/PI/src/Css/produto_personalizado.css
+++ b/PI/src/Css/produto_personalizado.css
@@ -100,7 +100,7 @@
 .insert-text{
     display: flex;
     width: 100%;
-    height: 400px;
+    height: 300px;
     border-radius: 5px;
     border: 1px solid #c2c2c2 ;
     outline: none;
@@ -145,16 +145,16 @@
 
 .image-preview {
     display: flex;
-    gap: 2rem;
     justify-content: center;
     margin-top: 10px;
     width: 100%;
+    object-fit: cover;
 
 }
 
 .box-insert-image img{
-    width: 70%;
-    height: auto;
+    height: 200px;
+    width: 200px;
     border-radius: 5px;
 }
 .custom-file-upload {
@@ -173,7 +173,7 @@
     color: rgb(255, 255, 255);
     border: none;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 14px;
     cursor: pointer;
     transition: background-color 0.3s ease, border-color 0.3s ease;
     font-weight: 500;
