--- a/PI/src/Css/style.css
+++ b/PI/src/Css/style.css
@@ -41,6 +41,7 @@
   --color-CinzaEscuro-3: #4A4A4A;
   --color-Azul-4: #4200db;
   --color-CinzaClaro-5: #E2E2E2;
+  --background-ADM-6:#fafbff;
 }
 
 
