--- a/PI/src/Css/cadastrar_produto_adm.css
+++ b/PI/src/Css/cadastrar_produto_adm.css
@@ -51,6 +51,8 @@ main{
     padding: 2rem;
     flex-direction: column;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    z-index: 5;
+    background-color: #fafbff;
 }
 
 
